# table-viewer

./: Cargo.toml  README.md
src/: csv.rs  lib.rs  main.rs  renderer.rs  state.rs  viewer.rs
tests/: renderer.rs
tests/resources/: small_table.csv
