[package]
name = "table_viewer"
version = "0.1.0"
author = "Tobias Kolditz"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
csv = "1.1"
clap = { version = "3.1", features = ["derive"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "tv"